tests/reject/fail_null_access.tk
shape Data (v: i32)
fn main() -> i32 {
    auto ^?p = new Data(v = 42)
    auto x = p.v // Error: p is nullable
    return 0
}
